# shrike-guard-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: test_gemini.py
src/shrike_guard/: __init__.py  _version.py  anthropic_client.py  async_client.py  auth.py  client.py  config.py  exceptions.py  gemini_client.py  resilience.py  sanitizer.py  scanner.py
tests/: __init__.py  test_anthropic_client.py  test_async_client.py  test_client.py  test_gemini_client.py
