[tool.poetry]
name = "shrike-guard"
version = "1.0.0"
description = "Shrike Security SDK - Protect your LLM applications (OpenAI, Claude, Gemini) from prompt injection, PII leakage, and jailbreaks"
authors = ["Shrike Security <security@shrike.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["openai", "anthropic", "claude", "gemini", "security", "llm", "prompt-injection", "pii", "jailbreak", "ai-safety"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "shrike_guard", from = "src"}]

[tool.poetry.urls]
"Homepage" = "https://shrike.security"
"Documentation" = "https://docs.shrike.security/sdk/python"
"Repository" = "https://github.com/shrike-security/shrike-guard"
"Bug Tracker" = "https://github.com/shrike-security/shrike-guard/issues"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"
# Core provider (always available)
openai = ">=1.0.0,<2.0.0"
# Optional providers
anthropic = {version = ">=0.18.0,<1.0.0", optional = true}
google-generativeai = {version = ">=0.3.0,<1.0.0", optional = true}

[tool.poetry.extras]
anthropic = ["anthropic"]
gemini = ["google-generativeai"]
all = ["anthropic", "google-generativeai"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
